# Anilibria

./: README.md  config_example.toml  main.py  pyproject.toml
anilibria/: api_anilibria.py  cli.py  config.py  functions.py  mx.sh
